--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -17,13 +17,14 @@
     cursor: pointer;
 }
 .sidebar .new-chat{
-    margin-top: 10px;
+    margin-top: 30px;
     display: inline-flex;
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
     background-color: grey;
     border: 50px;
+    border-radius: 50px;
     font-size: 14px;
     color: black;
     cursor: pointer;
@@ -47,5 +48,19 @@
     padding-right: 40px;
     border-radius: 50px;
     color: #282828;
+    cursor: pointer;
+}
+
+.sidebar .recent-entry:hover{
+    background-color: grey;
+}
+
+.sidebar .bottom{
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar .bottom-item{
+    padding-right: 10px;
     cursor: pointer;
 }
