--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -101,7 +101,6 @@
     flex: 1;
     background: transparent;
     border: none;
-    
     outline: none;
     padding: 8px;
     font-size: 18px;
@@ -111,4 +110,11 @@
     display: flex;
     align-items: center;
     gap: 15px;
+}
+
+.main .bottom-info{
+    font-size: 13px;
+    margin: 15px auto;
+    text-align: center;
+    font-weight: 300;
 }
