--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -3,7 +3,7 @@
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgb(164, 171, 173);
+    background-color: #f0f4f9;
     padding: 25px 15px;
 }
 
@@ -22,7 +22,7 @@
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
-    background-color: grey;
+    background-color: rgb(202, 202, 202);
     border: 50px;
     border-radius: 50px;
     font-size: 14px;
