--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -118,3 +118,69 @@
     text-align: center;
     font-weight: 300;
 }
+
+.result{
+    padding: 0px 5%;
+    max-height: 70vh;
+    overflow-y: scroll;
+}
+
+.result .result-title img{
+    width: 40px;
+    border-radius: 50%;
+}
+
+.result .result-data img{
+    width: 40px;
+    border-radius: 50%;
+}
+
+.result::-webkit-scrollbar{
+    display: none;
+}
+
+.result-title{
+    margin: 40px 0px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.result-data{
+    display: flex;
+    align-items: start;
+    gap: 20px;
+}
+
+.loader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+/* style the loader better*/
+.loader hr{
+    border-radius: 4px;
+    border: none;
+    background-color: #f6f7f8;
+    background: linear-gradient(to right, #9ed7ff ,#ffffff ,#9ed7ff);
+    background-size: 80px 50px;
+    height: 20px;
+    animation: loader 3s infinite linear;
+}
+
+/* keyframe is defined below but used on the border.hr styling above*/
+@keyframes loader{
+    0%{
+        background-position: -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
+
+.result-data p{
+    font-size: 17px;
+    font-weight: 300;
+    line-height: 1.8;
+}
